[project]
name = "flask-demo-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-marshmallow>=1.3.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-swagger-ui>=5.21.0",
    "marshmallow>=4.0.0",
    "marshmallow-sqlalchemy>=1.4.2",
    "watchdog>=6.0.0",
]
